--- a/package.json
+++ b/package.json
@@ -1,44 +1,69 @@
 {
-	"name": "@alexseitsinger/form-field-error",
-	"version": "0.1.0",
-	"description": "A react component for form field errors.",
-	"main": "dist/main.js",
-	"homepage": "https://github.com/alexseitsinger/form-field-error#readme",
-	"author": {
-		"name": "Alex Seitsinger",
-		"email": "alexseitsinger@gmail.com",
-		"url": "https://www.alexseitsinger.com"
-	},
-	"license": "BSD-2-Clause",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/alexseitsinger/form-field-error.git"
-	},
-	"files": ["dist/", "package.json", "README.md"],
-	"devDependencies": {
-		"@babel/core": "^7.2.2",
-		"@babel/preset-env": "^7.2.0",
-		"@babel/preset-react": "^7.0.0",
-		"@babel/plugin-proposal-class-properties": "^7.2.1",
-		"babel-plugin-transform-react-remove-prop-types": "^0.4.21",
-		"babel-plugin-emotion": "^10.0.5",
-		"babel-loader": "^8.0.4",
-		"enzyme": "^3.7.0",
-		"enzyme-adapter-react-16": "^1.6.0",
-		"jest": "^23.6.0",
-		"jest-emotion": "^9.2.11",
-		"webpack": "^4.27.1",
-		"webpack-cli": "^3.1.2"
-	},
-	"dependencies": {
-		"react": "^16.6.3",
-		"react-dom": "^16.6.3",
-		"prop-types": "^15.6.0",
-		"@emotion/core": "^10.0.5",
-		"@emotion/styled": "^10.0.5"
-	},
-	"scripts": {
-		"build": "./node_modules/.bin/webpack --config=webpack.config.js",
-		"test": "./node_modules/.bin/jest test"
-	}
+  "name": "@alexseitsinger/react-simple-input-error",
+  "version": "0.1.0",
+  "description": "A simple error for a simple input",
+  "main": "index.js",
+  "homepage": "https://github.com/alexseitsinger/react-simple-input-error#readme",
+  "author": {
+    "name": "Alex Seitsinger",
+    "email": "software@alexseitsinger.com"
+  },
+  "license": "BSD-2-Clause",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alexseitsinger/react-simple-input-error.git"
+  },
+  "files": [
+    "index.js",
+    "dist/main.js",
+    "dist/main.dev.js",
+    "dist/main.dev.js.map",
+    "package.json",
+    "README.md"
+  ],
+  "devDependencies": {
+    "@alexseitsinger/eslint-config-base": "^0.16.0",
+    "@alexseitsinger/eslint-config-react": "^0.10.0",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@emotion/babel-preset-css-prop": "^10.0.23",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.23",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "eslint": "^6.7.0",
+    "eslint-import-resolver-webpack": "^0.11.1",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-react": "^7.16.0",
+    "jest": "^24.9.0",
+    "jest-emotion": "^10.0.17",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "terser-webpack-plugin": "^2.2.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "peerDependencies": {
+    "react": "^16.12.0"
+  },
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.7.4",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "core-js": "^3.4.2",
+    "prop-types": "^15.7.2"
+  },
+  "scripts": {
+    "build:production": "./node_modules/.bin/webpack --config=webpack.config.js",
+    "build:development": "./node_modules/.bin/webpack --config=webpack.config.dev.js",
+    "build": "yarn run build:development && yarn run build:production",
+    "test": "./node_modules/.bin/jest test --noStackTrace",
+    "test:watch": "./node_modules/.bin/jest test --noStackTrace --watchAll"
+  }
 }
