--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@alexseitsinger/eslint-config-react": "^0.10.0",
     "@babel/core": "^7.7.4",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-syntax-export-namespace-from": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
     "@emotion/babel-preset-css-prop": "^10.0.23",
